--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
+    "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "nodemon": "^3.1.7"
   }
 }
